--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,9 @@ nav img {
 
 ul {
     padding: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 nav li {
@@ -21,10 +24,12 @@ nav li {
     color: white;
     list-style: none;
     text-align: center;
+    padding: .6rem 0 .6rem 0;
 }
 
 li a {
     color: white;
+    margin: 5%;
 }
 
 .nav-bar {
@@ -41,6 +46,6 @@ li a {
 
 #logo {
     background-color: #F5005B;
-    width: 18%;
+    width: 36%;
     height: 7rem;
 }
