--- a/css/main.css
+++ b/css/main.css
@@ -82,9 +82,18 @@ h2 {
 
 .feature {
     display: flex;
+    /*flex: 1 1 50%;*/
 }
 
 .rashomon img {
     height: 14rem;
     margin: 1rem 0 0 1rem;
+}
+
+.rashomon {
+    flex: 1 1 50%
+}
+
+.information {
+    flex: 1 1 50%
 }
