--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ html {
 
 body {
     margin: 0;
+    background-color: #FFFFFF;
 }
 
 nav img {
@@ -49,6 +50,7 @@ h2 {
 .topCap {
     background-color: #0B1942;
     color: #FFFFFF;
+    /*padding: 5px 0;*/
 }
 
 .nav-bar {
@@ -122,6 +124,23 @@ topCap a {
     margin: 1rem 0 0 1rem;
 }
 
+.calenders ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.calender li {
+    background-color: white;
+    border: solid black 1px;
+    height: 3rem;
+    width: 2rem;
+}
+
+.calender div {
+    color: white;
+    background-color: blue;
+}
+
 #up {
     padding-top: 1rem;
 }
@@ -174,7 +193,6 @@ topCap a {
     body {
         width: 1280px;
         margin: auto;
-        background-color: #FFFFFF;
     }
     .btm {
         display: flex;
