--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,10 @@ h2 {
     margin-left: 1rem;
 }
 
+h3 {
+    padding-left: 1rem;
+}
+
 .majority {
     margin: 1rem;
 }
@@ -127,22 +131,33 @@ topCap a {
 .calenders ul {
     display: flex;
     flex-wrap: wrap;
+    background-color: #0B1942;
+    padding-bottom: 2rem;
 }
 
 .calender li {
     background-color: white;
-    border: solid black 1px;
+    border: solid 1px #0B1942;
     height: 3rem;
-    width: 2rem;
+    width: 3rem;
+}
+
+.calender li:hover {
+    background-color: #F5005B;
 }
 
 .calender div {
     color: white;
-    background-color: blue;
+    background-color: #0B1942;
+    width: 46%;
+    height: 51%;
+    text-align: center;
+    font-size: x-small;
 }
 
 #up {
     padding-top: 1rem;
+    padding-left: 1rem;
 }
 
 #bot {
