added profile picture and put a border around it

--- a/css/main.css
+++ b/css/main.css
@@ -156,6 +156,11 @@ topCap a {
     font-size: x-small;
 }
 
+.profilePic img {
+    border-radius: 22rem;
+    border: 1px;
+}
+
 #meet {
     margin-left: 1rem;
 }
