--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,11 @@ h3 {
     padding-left: 1rem;
 }
 
+textarea {
+    width: 100%;
+    height: 3rem;
+}
+
 .majority {
     margin: 1rem;
 }
@@ -159,8 +164,40 @@ topCap a {
 .profilePic img {
     border-radius: 22rem;
     border: 1px;
-    height: 23rem;
+    height: 20rem;
     margin: 2rem 0;
+}
+
+.checks legend {
+    margin-top: 2rem;
+}
+
+.checks input {
+    margin: 1rem 0;
+}
+
+.text {
+    margin-top: 2rem;
+}
+
+#name {
+    width: 100%;
+    height: 1.5rem;
+}
+
+#email {
+    width: 100%;
+    height: 1.5rem;
+}
+
+#password {
+    width: 100%;
+    height: 1.5rem;
+}
+
+#confirm-password {
+    width: 100%;
+    height: 1.5;
 }
 
 #meet {
