fixed imaged size and flex top row

--- a/css/main.css
+++ b/css/main.css
@@ -241,9 +241,21 @@ topCap a {
     .topRow {
         display: flex;
     }
+    .topped {
+        display: flex;
+    }
     .first {
         flex: 1 1 30%;
         margin-right: 1rem;
+    }
+    .profilePic img {
+        height: 18rem;
+    }
+    .profilePic {
+        flex: 1 1 50%;
+    }
+    .inputs {
+        flex: 1 1 50%;
     }
     .second {
         flex: 1 1 30%;
