--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,7 @@ textarea {
     flex-wrap: wrap;
     background-color: #E2E2E2;
     margin: 1.5rem 0 0 0;
+    justify-content: space-around;
 }
 
 .featureTwo a {
@@ -126,11 +127,12 @@ topCap a {
 }
 
 .featureTwo img {
-    height: 14rem;
+    height: 11rem;
 }
 
 .poster {
     margin: 1rem 0 0 1rem;
+    flex: 1 1 44%;
 }
 
 .calenders ul {
@@ -244,6 +246,12 @@ topCap a {
     .topped {
         display: flex;
     }
+    .featureTwo {
+        flex-wrap: nowrap;
+    }
+    .poster {
+        flex: 1 1 20%;
+    }
     .first {
         flex: 1 1 30%;
         margin-right: 1rem;
@@ -266,6 +274,9 @@ topCap a {
         flex: 1 1 30%;
         margin-left: 1rem;
     }
+    /*.featureTwo {
+        flex-wrap: none;
+    }*/
     .rashomon img {
         height: 25rem;
     }
@@ -295,7 +306,7 @@ topCap a {
         background-color: black;
     }
     body {
-        width: 1280px;
+        max-width: 1280px;
         margin: auto;
     }
     .btm {
@@ -308,22 +319,31 @@ topCap a {
     .featureTwo {
         flex: 1 1 50%;
         margin-left: 4rem;
+        flex-wrap: wrap;
+        margin-top: 0;
     }
     .rashomon img {
         height: 19rem;
     }
-    .featureTwo {
-        margin-top: 0;
-    }
     .featureTwo img {
-        height: 19rem;
-        margin-left: 3rem;
+        /*height: 19rem;*/
+        /*margin-left: 3rem;*/
+        width: 75%;
+        height: inherit;
     }
     .featureTwo p {
-        margin-left: 3rem;
+        /*margin-left: 3rem;*/
+        margin-top: 0;
     }
     .featureTwo a {
-        margin-left: 3rem;
+        /*margin-left: 3rem;*/
+    }
+    .poster {
+        flex: 1 1 45%;
+        width: 32%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     #logo {
         width: 9rem;
